--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "add": "^2.0.6",
+    "draft-js": "^0.10.5",
+    "draft-js-plugins-editor": "^2.1.1",
     "draft.js": "^0.2.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "yarn": "^1.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
